--- a/resources/views/layouts/fieldsets/_tracking_stats.antlers.html
+++ b/resources/views/layouts/fieldsets/_tracking_stats.antlers.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-3" >
+<div class="grid grid-cols-3 py-4" >
     <img src="{{stat_icon}}" alt="">
     <div class="col-span-2 flex flex-col ml-2">
         <div class="font-cir-bold text-4xl">{{ before_figure }}<span class="counter" data-target="{{ stat_figure }}">0</span>{{after_figure}}</div>
