--- a/resources/views/layouts/navigation/_menu.antlers.html
+++ b/resources/views/layouts/navigation/_menu.antlers.html
@@ -9,7 +9,8 @@
     x-transition:leave-start="translate-x-0"
     x-transition:leave-end="translate-x-12"
 >
-    {{ svg src="navmenu" class="absolute top-1 right-1 4xl:right-[-12rem] 4xl:top-0"}}
+    {{ svg src="navmenu" class="absolute right-[-12rem] top-0 w-[43.5rem]"}}
+<!--    {{ svg src="navmenu" class="absolute top-1 right-1 4xl:right-[-12rem] 4xl:top-0"}}-->
         <ul
             class="flex flex-col list-reset space-y-6 z-1000 py-12"
         >
