--- a/resources/views/pages/about.antlers.html
+++ b/resources/views/pages/about.antlers.html
@@ -13,7 +13,7 @@
         <div class="block-subheading z-10">{{ subheading }}</div>
         <div class="block-content  z-10">{{ content | nl2br }}</div>
         <div>{{partial:layouts/fieldsets/_text_link}}</div>
-        {{ svg src="about-jagged" id="more-jag" class="absolute top-10 -left-4 z-1 hidden lg:block transform-gpu lg:translate-x-[-8.8rem] lg:translate-y-[-3.8rem] 2xl:translate-x-[-5.8rem] 2xl:translate-y-[-1.8rem]" }}
+        <img src="/assets/imgs/about-jagged.svg" class="absolute top-10 -left-4 z-1 hidden lg:block transform-gpu lg:translate-x-[-8.8rem] lg:translate-y-[-3.8rem] 2xl:translate-x-[-5.8rem] 2xl:translate-y-[-1.8rem]" alt="">
     </div>
     <div class="w-full ">
         <img  class="transform-gpu translate-x-[-9rem] translate-y-[-7rem] z-10" src="{{about_image}}" alt="">
