--- a/resources/views/home.antlers.html
+++ b/resources/views/home.antlers.html
@@ -12,9 +12,9 @@
 <!-- Mission -->
 <div class="bg-dark text-white panel-size ">
     <div class="4xl:w-8/12 flex flex-col space-y-4">
-        <div class="block-heading">{{mission_heading}}</div>
-        <div class="block-subheading">{{mission_subheading}}</div>
-        <div class="block-content">{{mission_text | nl2br}}</div>
+        <div class="block-heading" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back" >{{mission_heading}}</div>
+        <div class="block-subheading" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500" data-aos-easing="ease-in-back">{{mission_subheading}}</div>
+        <div class="block-content" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{mission_text | nl2br}}</div>
     </div>
 </div>
 
@@ -22,9 +22,9 @@
 <!-- Tracking -->
 
 <div class="bg-white text-dark panel-size flex flex-col space-y-4" id="trackMe">
-    <div class="block-heading">{{track_heading}}</div>
-    <div class="block-content ">{{track_content | nl2br}}</div>
-    <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 content-around mx-auto sm:mx-0 ">
+    <div class="block-heading" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back">{{track_heading}}</div>
+    <div class="block-content" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{track_content | nl2br}}</div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 content-around mx-auto sm:mx-0 " data-aos="fade-up" data-aos-duration="2000" data-aos-delay="1000" data-aos-easing="ease-in-back">
         {{ stats }}
         {{ partial:layouts/fieldsets/tracking_stats }}
         {{ /stats }}
@@ -35,16 +35,16 @@
 <!-- More -->
 
 <div class="bg-dark-lime text-white grid grid-cols-1 lg:grid-cols-2 xl:-mb-8">
-    <div class="z-10 relative flex items-center ">
+    <div class="z-10 relative flex items-center " data-aos="fade-right" data-aos-duration="1500" data-aos-delay="500" data-aos-easing="ease-in-back">
 <!--        <img class="pt-8 lg:pt-0 xl:pt-8 4xl:pl-24 md:mx-auto" src="{{more_image}}" alt="">-->
-        {{ svg src="homeaboutshape" class="pt-8 lg:pt-0 xl:pt-8 4xl:pl-24 md:mx-auto" }}
+        {{ svg src="homeaboutshape" class="pt-8 lg:pt-0 xl:pt-8 4xl:pl-24 md:mx-auto"  }}
 <!--        <div class="hidden absolute  3xl:block 3xl:top-[5.5rem] 4xl:top-14 3xl:right-10 3xl:w-[15%]  z-1"><img src="/assets/imgs/quarter.svg"-->
 <!--                                                                                   alt=""></div>-->
     </div>
     <div class="flex flex-col py-4 space-y-4 p-6 4xl:pl-12 4xl:pr-40  sm:py-14">
-        <div class="block-heading">{{more_heading}}</div>
-        <div class="">{{more_content}}</div>
-        <div class="z-10 pt-[2.5rem]">{{ partial:layouts/fieldsets/rounded_button}}</div>
+        <div class="block-heading" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back">{{more_heading}}</div>
+        <div class="" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{more_content}}</div>
+        <div class="z-10 pt-[2.5rem]" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{ partial:layouts/fieldsets/rounded_button}}</div>
 
     </div>
 </div>
