--- a/resources/views/pages/about.antlers.html
+++ b/resources/views/pages/about.antlers.html
@@ -10,16 +10,16 @@
 <div class="flex flex-col-reverse lg:flex-row z-10 lg:items-center ">
     <div
         class="flex flex-col space-y-4 w-full z-10 px-6 py-10  lg:px-24 lg:py-12 xl:px-20 xl:py-20  4xl:pl-48 4xl:pr-28 4xl:py-24 relative">
-        <div class="lg:pt-48 block-heading z-10">{{ heading }}</div>
-        <div class="block-subheading z-10">{{ subheading }}</div>
-        <div class="block-content  z-10">{{ content | nl2br }}</div>
-        <div>{{partial:layouts/fieldsets/_text_link}}</div>
+        <div class="lg:pt-48 block-heading z-10" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back">{{ heading }}</div>
+        <div class="block-subheading z-10" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500" data-aos-easing="ease-in-back">{{ subheading }}</div>
+        <div class="block-content  z-10" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{ content | nl2br }}</div>
+        <div data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{partial:layouts/fieldsets/_text_link}}</div>
         <img src="/assets/imgs/about-jagged.svg"
              class="absolute top-10 -left-4 z-1 hidden lg:block transform-gpu lg:translate-x-[-8.8rem] lg:translate-y-[-3.8rem] 2xl:translate-x-[-5.8rem] 2xl:translate-y-[-1.8rem] "
-             alt="">
+             alt="" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back" >
     </div>
-    <div class="w-full ">
-        <img class="transform-gpu translate-x-[-9rem] translate-y-[-7rem] 6xl:translate-y-[-3rem] z-10" src="{{about_image}}" alt="">
+    <div class="w-full " data-aos="fade-left" data-aos-duration="1500" data-aos-delay="500" data-aos-easing="ease-in-back">
+        <img class="transform-gpu translate-x-[-9rem] translate-y-[-7rem] 6xl:translate-y-[-3rem] z-10" src="{{about_image}}" alt="" >
     </div>
 
 </div>
