Styling on all screens

--- a/resources/views/pages/contact.antlers.html
+++ b/resources/views/pages/contact.antlers.html
@@ -6,18 +6,15 @@
 <img id="hero-tri" class="absolute -top-10 left-[-7.5rem]" src="/assets/imgs/quarter-jagged.svg" alt="">
 {{ /if }}
 
-<div class="bg-lime relative h-hero-height text-dark overflow-hidden">
+<div class="bg-lime relative  text-dark overflow-hidden">
     <div class="grid grid-cols-1 lg:grid-cols-2 pt-12">
-        <div class="z-100 pt-4  sm:pt-16 px-16 sm:px-24 xl:px-16 2xl:pl-24 4xl:px-48">
+        <div class="z-100 pt-4  sm:pt-16 px-6 sm:px-24 xl:px-16 2xl:pt-18 2xl:pl-24 4xl:px-48 4xl:pt-24">
             <div class="contact-heading tracking-wider z-100" data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back" >{{contact_heading}}</div>
-            <div class="block-content z-100 pt-24 pl-8 sm:pl-0 sm:pt-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{contact_content}}</div>
+            <div class="block-content z-100 pt-8 sm:pl-0 sm:pt-4" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{contact_content}}</div>
         </div>
-<!--        Black Shape -->
-            <img class="hidden lg:block absolute z-10 top-0 left-0 4xl:translate-x-[10.5rem] 4xl:translate-y-[28rem] " src="/assets/imgs/contact_black.svg" alt="">
-<!--        White Shape -->
-            <img class="absolute z-10 top-[10rem] left-[-15rem] transform-gpu translate-y-[-9rem] translate-x-[9.8rem] md:translate-x-[5rem] 4xl:translate-x-4" src="/assets/imgs/contact_white.svg" alt="">
+        <img class="absolute hidden sm:block sm:w-10/12 md:w-[644px] xl:w-1/2 4xl:w-[965px]" src="/assets/imgs/contactGroup.png" alt="">
 <!--       Right hand side of the page -->
-        <div class="p-24 px-6 sm:pt-48 md:pt-72 lg:pt-96 2xl:w-10/12" data-aos="fade-left" data-aos-duration="1500" data-aos-easing="ease-in-back">
+        <div class="p-24 px-6  sm:pt-[24rem] md:pt-[25.5rem] lg:pt-8 2xl:w-10/12 4xl:pt-16  4xl:pb-[9rem]  5xl:w-10/12 5xl:ml-0" data-aos="fade-left" data-aos-delay="1000" data-aos-duration="1500" data-aos-easing="ease-in-back">
             {{ form:contact }}
 
             {{ if success }}
@@ -33,9 +30,9 @@
                 {{ /errors }}
             </div>
             {{ /if }}
-<div class="md:grid grid-cols-1 md:grid-cols-2 flex flex-col">
+<div class="md:grid grid-cols-1 md:grid-cols-2  flex flex-col lg:pt-48">
             {{ fields limit="4" }}
-            <div class="flex flex-row items-center space-y-6 even:pl-5 pb-5">
+            <div class="flex flex-row items-center space-y-6  md:even:pl-5 pb-5 ">
                 <div class="w-40 flex flex-row items-center">{{ display }} {{ if validate }} <span class="pl-1">*</span> {{ /if }} </div>
                 <div class="w-full">{{ field }}</div>
                 {{ if error }}
