--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1086,6 +1086,26 @@ https://flickity.metafizzy.co
   right: 0.25rem;
 }
 
+.top-3 {
+  top: 0.75rem;
+}
+
+.left-5 {
+  left: 1.25rem;
+}
+
+.top-\[7\.8rem\] {
+  top: 7.8rem;
+}
+
+.top-\[0\.8rem\] {
+  top: 0.8rem;
+}
+
+.left-\[-7\.8rem\] {
+  left: -7.8rem;
+}
+
 .z-\[1001\] {
   z-index: 1001;
 }
@@ -1113,6 +1133,11 @@ https://flickity.metafizzy.co
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .ml-2 {
@@ -1205,16 +1230,6 @@ https://flickity.metafizzy.co
 
 .max-w-full {
   max-width: 100%;
-}
-
-.translate-x-\[-9rem\] {
-  --tw-translate-x: -9rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[-7rem\] {
-  --tw-translate-y: -7rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-y-\[-9rem\] {
@@ -1520,6 +1535,10 @@ https://flickity.metafizzy.co
   padding-bottom: 1.25rem;
 }
 
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
 .pb-24 {
   padding-bottom: 6rem;
 }
@@ -1540,18 +1559,6 @@ https://flickity.metafizzy.co
   padding-right: 6rem;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pl-\[50px\] {
-  padding-left: 50px;
-}
-
 .align-middle {
   vertical-align: middle;
 }
@@ -1562,11 +1569,6 @@ https://flickity.metafizzy.co
 
 .font-cir-bold {
   font-family: cir-bold;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-4xl {
@@ -1597,10 +1599,6 @@ https://flickity.metafizzy.co
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .uppercase {
@@ -2281,6 +2279,14 @@ https://flickity.metafizzy.co
     margin-right: 0px;
   }
 
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:w-10\/12 {
+    width: 83.333333%;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2293,6 +2299,11 @@ https://flickity.metafizzy.co
   .sm\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
+  }
+
+  .sm\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .sm\:pt-16 {
@@ -2309,6 +2320,14 @@ https://flickity.metafizzy.co
 
   .sm\:pt-48 {
     padding-top: 12rem;
+  }
+
+  .sm\:pt-8 {
+    padding-top: 2rem;
+  }
+
+  .sm\:pt-\[24rem\] {
+    padding-top: 24rem;
   }
 }
 
@@ -2329,6 +2348,14 @@ https://flickity.metafizzy.co
 
   .md\:w-1\/4 {
     width: 25%;
+  }
+
+  .md\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .md\:w-\[644px\] {
+    width: 644px;
   }
 
   .md\:translate-x-\[5rem\] {
@@ -2371,8 +2398,42 @@ https://flickity.metafizzy.co
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .md\:space-y-6 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+  }
+
   .md\:pt-72 {
     padding-top: 18rem;
+  }
+
+  .md\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .md\:pt-24 {
+    padding-top: 6rem;
+  }
+
+  .md\:pt-\[25rem\] {
+    padding-top: 25rem;
+  }
+
+  .md\:pt-\[24\.5rem\] {
+    padding-top: 24.5rem;
+  }
+
+  .md\:pt-\[19\.5rem\] {
+    padding-top: 19.5rem;
+  }
+
+  .md\:pt-\[25\.5rem\] {
+    padding-top: 25.5rem;
+  }
+
+  .md\:even\:pl-5:nth-child(even) {
+    padding-left: 1.25rem;
   }
 }
 
@@ -2439,8 +2500,16 @@ https://flickity.metafizzy.co
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:flex-col {
+    flex-direction: column;
   }
 
   .lg\:items-center {
@@ -2486,12 +2555,52 @@ https://flickity.metafizzy.co
   .lg\:pl-24 {
     padding-left: 6rem;
   }
+
+  .lg\:pb-4 {
+    padding-bottom: 1rem;
+  }
+
+  .lg\:pt-\[15rem\] {
+    padding-top: 15rem;
+  }
+
+  .lg\:pt-2 {
+    padding-top: 0.5rem;
+  }
+
+  .lg\:pt-8 {
+    padding-top: 2rem;
+  }
 }
 
 @media (min-width: 1280px) {
 
+  .xl\:top-\[4\.8rem\] {
+    top: 4.8rem;
+  }
+
+  .xl\:top-\[4\.7rem\] {
+    top: 4.7rem;
+  }
+
+  .xl\:top-\[2\.7rem\] {
+    top: 2.7rem;
+  }
+
   .xl\:-mb-8 {
     margin-bottom: -2rem;
+  }
+
+  .xl\:w-full {
+    width: 100%;
+  }
+
+  .xl\:w-10\/12 {
+    width: 83.333333%;
+  }
+
+  .xl\:w-1\/2 {
+    width: 50%;
   }
 
   @-webkit-keyframes xlTriSlide {
@@ -2554,8 +2663,17 @@ https://flickity.metafizzy.co
     padding-right: 4rem;
   }
 
+  .xl\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .xl\:pt-8 {
     padding-top: 2rem;
+  }
+
+  .xl\:pb-0 {
+    padding-bottom: 0px;
   }
 }
 
@@ -2618,6 +2736,10 @@ https://flickity.metafizzy.co
   .\32xl\:pl-56 {
     padding-left: 14rem;
   }
+
+  .\32xl\:pt-18 {
+    padding-top: 4.5rem;
+  }
 }
 
 @media (min-width: 1600px) {
@@ -2653,8 +2775,58 @@ https://flickity.metafizzy.co
     top: 0px;
   }
 
+  .\34xl\:top-\[1\.5rem\] {
+    top: 1.5rem;
+  }
+
+  .\34xl\:left-\[-9rem\] {
+    left: -9rem;
+  }
+
+  .\34xl\:top-\[3\.5rem\] {
+    top: 3.5rem;
+  }
+
+  .\34xl\:left-\[-8\.5rem\] {
+    left: -8.5rem;
+  }
+
+  .\34xl\:mt-\[-4rem\] {
+    margin-top: -4rem;
+  }
+
+  .\34xl\:ml-24 {
+    margin-left: 6rem;
+  }
+
+  .\34xl\:mt-16 {
+    margin-top: 4rem;
+  }
+
   .\34xl\:w-8\/12 {
     width: 66.666667%;
+  }
+
+  .\34xl\:w-10\/12 {
+    width: 83.333333%;
+  }
+
+  .\34xl\:w-9\/12 {
+    width: 75%;
+  }
+
+  .\34xl\:w-\[965px\] {
+    width: 965px;
+  }
+
+  .\34xl\:translate-x-\[-9rem\] {
+    --tw-translate-x: -9rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:translate-y-\[-7rem\] {
+    --tw-translate-y: -7rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .\34xl\:translate-x-\[10\.5rem\] {
@@ -2669,6 +2841,11 @@ https://flickity.metafizzy.co
 
   .\34xl\:translate-x-4 {
     --tw-translate-x: 1rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .\34xl\:translate-x-\[4rem\] {
+    --tw-translate-x: 4rem;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
@@ -2709,6 +2886,63 @@ https://flickity.metafizzy.co
 
   .\34xl\:pb-10 {
     padding-bottom: 2.5rem;
+  }
+
+  .\34xl\:pt-40 {
+    padding-top: 10rem;
+  }
+
+  .\34xl\:pt-8 {
+    padding-top: 2rem;
+  }
+
+  .\34xl\:pb-\[12\.5rem\] {
+    padding-bottom: 12.5rem;
+  }
+
+  .\34xl\:pt-24 {
+    padding-top: 6rem;
+  }
+
+  .\34xl\:pl-8 {
+    padding-left: 2rem;
+  }
+
+  .\34xl\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .\34xl\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .\34xl\:pt-16 {
+    padding-top: 4rem;
+  }
+
+  .\34xl\:pb-\[9rem\] {
+    padding-bottom: 9rem;
+  }
+}
+
+@media (min-width: 2240px) {
+
+  .\35xl\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .\35xl\:w-10\/12 {
+    width: 83.333333%;
+  }
+
+  .\35xl\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .\35xl\:px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 }
 
