--- a/resources/views/pages/template.antlers.html
+++ b/resources/views/pages/template.antlers.html
@@ -8,14 +8,14 @@
 {{ main_content }}
 {{ if type == "content" }}
 <div class="flex flex-col space-y-4 w-full z-10 4xl:pb-10 ">
-    <div class="block-heading z-10">{{ heading }}</div>
-    <div class="block-subheading z-10">{{ subheading }}</div>
-    <div class="block-content z-10">{{ para | nl2br }}</div>
+    <div class="block-heading z-10 " data-aos="fade-right" data-aos-duration="1500" data-aos-easing="ease-in-back">{{ heading }}</div>
+    <div class="block-subheading z-10" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="500" data-aos-easing="ease-in-back">{{ subheading }}</div>
+    <div class="block-content z-10" data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{ para | nl2br }}</div>
 </div>
 {{ /if }}
 
 {{ if type == "text" }}
-<div class="block-content ">{{ text }}</div>
+<div class="block-content " data-aos="fade-left" data-aos-duration="2000" data-aos-delay="750" data-aos-easing="ease-in-back">{{ text }}</div>
 {{ /if }}
 {{ /main_content }}
 </div>
