--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1014,28 +1014,12 @@ https://flickity.metafizzy.co
   top: -2.5rem;
 }
 
-.top-10 {
-  top: 2.5rem;
+.top-\[0\.8rem\] {
+  top: 0.8rem;
 }
 
-.-left-4 {
-  left: -1rem;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.top-\[10rem\] {
-  top: 10rem;
-}
-
-.left-\[-15rem\] {
-  left: -15rem;
+.left-\[-7\.8rem\] {
+  left: -7.8rem;
 }
 
 .top-1\/2 {
@@ -1048,6 +1032,14 @@ https://flickity.metafizzy.co
 
 .bottom-4 {
   bottom: 1rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .top-\[-10rem\] {
@@ -1086,26 +1078,6 @@ https://flickity.metafizzy.co
   right: 0.25rem;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
-.left-5 {
-  left: 1.25rem;
-}
-
-.top-\[7\.8rem\] {
-  top: 7.8rem;
-}
-
-.top-\[0\.8rem\] {
-  top: 0.8rem;
-}
-
-.left-\[-7\.8rem\] {
-  left: -7.8rem;
-}
-
 .z-\[1001\] {
   z-index: 1001;
 }
@@ -1133,11 +1105,6 @@ https://flickity.metafizzy.co
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 
 .ml-2 {
@@ -1180,12 +1147,12 @@ https://flickity.metafizzy.co
   display: none;
 }
 
-.h-hero-height {
-  height: calc(100vh - 103px);
-}
-
 .h-halfScreen {
   height: 50vh;
+}
+
+.h-hero-height {
+  height: calc(100vh - 103px);
 }
 
 .h-full {
@@ -1202,6 +1169,14 @@ https://flickity.metafizzy.co
 
 .h-16 {
   height: 4rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.h-\[49rem\] {
+  height: 49rem;
 }
 
 .w-full {
@@ -1230,16 +1205,6 @@ https://flickity.metafizzy.co
 
 .max-w-full {
   max-width: 100%;
-}
-
-.translate-y-\[-9rem\] {
-  --tw-translate-y: -9rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-x-\[9\.8rem\] {
-  --tw-translate-x: 9.8rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .translate-x-12 {
@@ -1367,6 +1332,10 @@ https://flickity.metafizzy.co
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1457,6 +1426,10 @@ https://flickity.metafizzy.co
   padding: 0.25rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1472,14 +1445,14 @@ https://flickity.metafizzy.co
   padding-bottom: 2.5rem;
 }
 
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.px-16 {
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 .py-2 {
@@ -1523,14 +1496,6 @@ https://flickity.metafizzy.co
   padding-top: 1rem;
 }
 
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1559,6 +1524,10 @@ https://flickity.metafizzy.co
   padding-right: 6rem;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .align-middle {
   vertical-align: middle;
 }
@@ -1571,14 +1540,14 @@ https://flickity.metafizzy.co
   font-family: cir-bold;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-xs {
@@ -1630,6 +1599,11 @@ https://flickity.metafizzy.co
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-lime {
@@ -2258,10 +2232,6 @@ https://flickity.metafizzy.co
 
 [data-aos=flip-down].aos-animate{transform:perspective(2500px) rotateX(0)}
 
-.even\:pl-5:nth-child(even) {
-  padding-left: 1.25rem;
-}
-
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2296,14 +2266,14 @@ https://flickity.metafizzy.co
     padding-bottom: 3.5rem;
   }
 
-  .sm\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
   .sm\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .sm\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
 
   .sm\:pt-16 {
@@ -2316,14 +2286,6 @@ https://flickity.metafizzy.co
 
   .sm\:pt-4 {
     padding-top: 1rem;
-  }
-
-  .sm\:pt-48 {
-    padding-top: 12rem;
-  }
-
-  .sm\:pt-8 {
-    padding-top: 2rem;
   }
 
   .sm\:pt-\[24rem\] {
@@ -2346,10 +2308,6 @@ https://flickity.metafizzy.co
     display: grid;
   }
 
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
   .md\:w-8\/12 {
     width: 66.666667%;
   }
@@ -2358,9 +2316,8 @@ https://flickity.metafizzy.co
     width: 644px;
   }
 
-  .md\:translate-x-\[5rem\] {
-    --tw-translate-x: 5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .md\:w-1\/4 {
+    width: 25%;
   }
 
   @-webkit-keyframes mdTriSlide {
@@ -2398,34 +2355,14 @@ https://flickity.metafizzy.co
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
-    margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-  }
-
-  .md\:pt-72 {
-    padding-top: 18rem;
-  }
-
-  .md\:pl-8 {
-    padding-left: 2rem;
-  }
-
-  .md\:pt-24 {
-    padding-top: 6rem;
-  }
-
-  .md\:pt-\[25rem\] {
-    padding-top: 25rem;
-  }
-
-  .md\:pt-\[24\.5rem\] {
-    padding-top: 24.5rem;
-  }
-
-  .md\:pt-\[19\.5rem\] {
-    padding-top: 19.5rem;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
   .md\:pt-\[25\.5rem\] {
@@ -2443,22 +2380,20 @@ https://flickity.metafizzy.co
     margin-left: 0px;
   }
 
+  .lg\:mb-\[22rem\] {
+    margin-bottom: 22rem;
+  }
+
   .lg\:block {
     display: block;
   }
 
+  .lg\:h-\[32\.8rem\] {
+    height: 32.8rem;
+  }
+
   .lg\:w-9\/12 {
     width: 75%;
-  }
-
-  .lg\:translate-x-\[-8\.8rem\] {
-    --tw-translate-x: -8.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:translate-y-\[-3\.8rem\] {
-    --tw-translate-y: -3.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   @-webkit-keyframes lgTriSlide {
@@ -2500,14 +2435,6 @@ https://flickity.metafizzy.co
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .lg\:flex-row {
-    flex-direction: row;
-  }
-
   .lg\:flex-col {
     flex-direction: column;
   }
@@ -2544,8 +2471,12 @@ https://flickity.metafizzy.co
     padding-top: 12rem;
   }
 
-  .lg\:pt-96 {
-    padding-top: 24rem;
+  .lg\:pb-4 {
+    padding-bottom: 1rem;
+  }
+
+  .lg\:pt-8 {
+    padding-top: 2rem;
   }
 
   .lg\:pl-48 {
@@ -2555,33 +2486,9 @@ https://flickity.metafizzy.co
   .lg\:pl-24 {
     padding-left: 6rem;
   }
-
-  .lg\:pb-4 {
-    padding-bottom: 1rem;
-  }
-
-  .lg\:pt-\[15rem\] {
-    padding-top: 15rem;
-  }
-
-  .lg\:pt-2 {
-    padding-top: 0.5rem;
-  }
-
-  .lg\:pt-8 {
-    padding-top: 2rem;
-  }
 }
 
 @media (min-width: 1280px) {
-
-  .xl\:top-\[4\.8rem\] {
-    top: 4.8rem;
-  }
-
-  .xl\:top-\[4\.7rem\] {
-    top: 4.7rem;
-  }
 
   .xl\:top-\[2\.7rem\] {
     top: 2.7rem;
@@ -2591,12 +2498,12 @@ https://flickity.metafizzy.co
     margin-bottom: -2rem;
   }
 
-  .xl\:w-full {
-    width: 100%;
+  .xl\:mb-\[28rem\] {
+    margin-bottom: 28rem;
   }
 
-  .xl\:w-10\/12 {
-    width: 83.333333%;
+  .xl\:w-full {
+    width: 100%;
   }
 
   .xl\:w-1\/2 {
@@ -2663,11 +2570,6 @@ https://flickity.metafizzy.co
     padding-right: 4rem;
   }
 
-  .xl\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
   .xl\:pt-8 {
     padding-top: 2rem;
   }
@@ -2679,18 +2581,12 @@ https://flickity.metafizzy.co
 
 @media (min-width: 1536px) {
 
+  .\32xl\:mb-\[29rem\] {
+    margin-bottom: 29rem;
+  }
+
   .\32xl\:w-10\/12 {
     width: 83.333333%;
-  }
-
-  .\32xl\:translate-x-\[-5\.8rem\] {
-    --tw-translate-x: -5.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\32xl\:translate-y-\[-1\.8rem\] {
-    --tw-translate-y: -1.8rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   @-webkit-keyframes \32xlTriSlide {
@@ -2729,16 +2625,16 @@ https://flickity.metafizzy.co
     padding-right: 12rem;
   }
 
+  .\32xl\:pt-18 {
+    padding-top: 4.5rem;
+  }
+
   .\32xl\:pl-24 {
     padding-left: 6rem;
   }
 
   .\32xl\:pl-56 {
     padding-left: 14rem;
-  }
-
-  .\32xl\:pt-18 {
-    padding-top: 4.5rem;
   }
 }
 
@@ -2750,6 +2646,10 @@ https://flickity.metafizzy.co
 
   .\33xl\:right-10 {
     right: 2.5rem;
+  }
+
+  .\33xl\:mb-\[30rem\] {
+    margin-bottom: 30rem;
   }
 
   .\33xl\:block {
@@ -2767,22 +2667,6 @@ https://flickity.metafizzy.co
     top: 3.5rem;
   }
 
-  .\34xl\:right-\[-12rem\] {
-    right: -12rem;
-  }
-
-  .\34xl\:top-0 {
-    top: 0px;
-  }
-
-  .\34xl\:top-\[1\.5rem\] {
-    top: 1.5rem;
-  }
-
-  .\34xl\:left-\[-9rem\] {
-    left: -9rem;
-  }
-
   .\34xl\:top-\[3\.5rem\] {
     top: 3.5rem;
   }
@@ -2791,16 +2675,16 @@ https://flickity.metafizzy.co
     left: -8.5rem;
   }
 
-  .\34xl\:mt-\[-4rem\] {
-    margin-top: -4rem;
+  .\34xl\:right-\[-12rem\] {
+    right: -12rem;
   }
 
-  .\34xl\:ml-24 {
-    margin-left: 6rem;
+  .\34xl\:top-0 {
+    top: 0px;
   }
 
-  .\34xl\:mt-16 {
-    margin-top: 4rem;
+  .\34xl\:mb-\[35\.9rem\] {
+    margin-bottom: 35.9rem;
   }
 
   .\34xl\:w-8\/12 {
@@ -2811,42 +2695,8 @@ https://flickity.metafizzy.co
     width: 83.333333%;
   }
 
-  .\34xl\:w-9\/12 {
-    width: 75%;
-  }
-
   .\34xl\:w-\[965px\] {
     width: 965px;
-  }
-
-  .\34xl\:translate-x-\[-9rem\] {
-    --tw-translate-x: -9rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\34xl\:translate-y-\[-7rem\] {
-    --tw-translate-y: -7rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\34xl\:translate-x-\[10\.5rem\] {
-    --tw-translate-x: 10.5rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\34xl\:translate-y-\[28rem\] {
-    --tw-translate-y: 28rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\34xl\:translate-x-4 {
-    --tw-translate-x: 1rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .\34xl\:translate-x-\[4rem\] {
-    --tw-translate-x: 4rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .\34xl\:py-24 {
@@ -2884,36 +2734,8 @@ https://flickity.metafizzy.co
     padding-right: 7rem;
   }
 
-  .\34xl\:pb-10 {
-    padding-bottom: 2.5rem;
-  }
-
-  .\34xl\:pt-40 {
-    padding-top: 10rem;
-  }
-
-  .\34xl\:pt-8 {
-    padding-top: 2rem;
-  }
-
-  .\34xl\:pb-\[12\.5rem\] {
-    padding-bottom: 12.5rem;
-  }
-
   .\34xl\:pt-24 {
     padding-top: 6rem;
-  }
-
-  .\34xl\:pl-8 {
-    padding-left: 2rem;
-  }
-
-  .\34xl\:pt-20 {
-    padding-top: 5rem;
-  }
-
-  .\34xl\:pt-10 {
-    padding-top: 2.5rem;
   }
 
   .\34xl\:pt-16 {
@@ -2922,6 +2744,14 @@ https://flickity.metafizzy.co
 
   .\34xl\:pb-\[9rem\] {
     padding-bottom: 9rem;
+  }
+
+  .\34xl\:pb-10 {
+    padding-bottom: 2.5rem;
+  }
+
+  .\34xl\:pb-\[6\.5rem\] {
+    padding-bottom: 6.5rem;
   }
 }
 
@@ -2934,23 +2764,16 @@ https://flickity.metafizzy.co
   .\35xl\:w-10\/12 {
     width: 83.333333%;
   }
-
-  .\35xl\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-
-  .\35xl\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
 }
 
 @media (min-width: 2560px) {
 
-  .\36xl\:translate-y-\[-3rem\] {
-    --tw-translate-y: -3rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  .\36xl\:h-\[49rem\] {
+    height: 49rem;
+  }
+
+  .\36xl\:pb-16 {
+    padding-bottom: 4rem;
   }
 }
 
