--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1107,6 +1107,14 @@ https://flickity.metafizzy.co
   margin-right: auto;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -1147,6 +1155,14 @@ https://flickity.metafizzy.co
   display: none;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
 .h-halfScreen {
   height: 50vh;
 }
@@ -1163,20 +1179,8 @@ https://flickity.metafizzy.co
   height: 103px;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-16 {
   height: 4rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-\[49rem\] {
-  height: 49rem;
 }
 
 .w-full {
@@ -1185,6 +1189,10 @@ https://flickity.metafizzy.co
 
 .w-40 {
   width: 10rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-10\/12 {
@@ -1205,6 +1213,10 @@ https://flickity.metafizzy.co
 
 .max-w-full {
   max-width: 100%;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .translate-x-12 {
@@ -1276,8 +1288,16 @@ https://flickity.metafizzy.co
   flex-direction: column-reverse;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .content-around {
   align-content: space-around;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -1328,12 +1348,16 @@ https://flickity.metafizzy.co
   overflow-x: hidden;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -1342,6 +1366,10 @@ https://flickity.metafizzy.co
 
 .border-0 {
   border-width: 0px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
 }
 
 .border-b-2 {
@@ -1371,11 +1399,6 @@ https://flickity.metafizzy.co
 .bg-lime {
   --tw-bg-opacity: 1;
   background-color: rgb(3 252 150 / var(--tw-bg-opacity));
-}
-
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
 .bg-red-300 {
@@ -1422,12 +1445,16 @@ https://flickity.metafizzy.co
   padding: 0.5rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
 .p-4 {
   padding: 1rem;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .py-4 {
@@ -1458,6 +1485,11 @@ https://flickity.metafizzy.co
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-3 {
@@ -1504,6 +1536,10 @@ https://flickity.metafizzy.co
   padding-left: 0.25rem;
 }
 
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
 .pb-24 {
   padding-bottom: 6rem;
 }
@@ -1540,6 +1576,11 @@ https://flickity.metafizzy.co
   font-family: cir-bold;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1558,11 +1599,6 @@ https://flickity.metafizzy.co
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-lg {
@@ -1596,6 +1632,11 @@ https://flickity.metafizzy.co
   color: rgb(31 33 40 / var(--tw-text-opacity));
 }
 
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1609,11 +1650,6 @@ https://flickity.metafizzy.co
 .text-lime {
   --tw-text-opacity: 1;
   color: rgb(3 252 150 / var(--tw-text-opacity));
-}
-
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .opacity-75 {
@@ -2237,6 +2273,21 @@ https://flickity.metafizzy.co
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-lime:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 252 150 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
+}
+
 .hover\:text-lime:hover {
   --tw-text-opacity: 1;
   color: rgb(3 252 150 / var(--tw-text-opacity));
@@ -2376,20 +2427,20 @@ https://flickity.metafizzy.co
 
 @media (min-width: 1024px) {
 
-  .lg\:ml-0 {
-    margin-left: 0px;
-  }
-
   .lg\:mb-\[22rem\] {
     margin-bottom: 22rem;
+  }
+
+  .lg\:ml-0 {
+    margin-left: 0px;
   }
 
   .lg\:block {
     display: block;
   }
 
-  .lg\:h-\[32\.8rem\] {
-    height: 32.8rem;
+  .lg\:w-1\/2 {
+    width: 50%;
   }
 
   .lg\:w-9\/12 {
@@ -2742,16 +2793,12 @@ https://flickity.metafizzy.co
     padding-top: 4rem;
   }
 
-  .\34xl\:pb-\[9rem\] {
-    padding-bottom: 9rem;
+  .\34xl\:pb-\[6\.5rem\] {
+    padding-bottom: 6.5rem;
   }
 
   .\34xl\:pb-10 {
     padding-bottom: 2.5rem;
-  }
-
-  .\34xl\:pb-\[6\.5rem\] {
-    padding-bottom: 6.5rem;
   }
 }
 
@@ -2767,10 +2814,6 @@ https://flickity.metafizzy.co
 }
 
 @media (min-width: 2560px) {
-
-  .\36xl\:h-\[49rem\] {
-    height: 49rem;
-  }
 
   .\36xl\:pb-16 {
     padding-bottom: 4rem;
